# Prototype_Fluxborn

./: .gitignore  .gitmodules  CMakeLists.txt  Cashe_CMakeLists.txt  Dockerfile  README.md
Assets/shaders/: 2_becup_default.vert  default.frag  default.vert
Cmake/: SetupPlatform.cmake
Cmake/toolchains/: terrain.py  windows-mingw.cmake
Docs/: MODULE_GUIDE.md
Fluxborn/: CMakeLists.txt
Fluxborn/include/Core/Events/: KeyboardEvents.h  MouseEvents.h
Fluxborn/include/Renderer/: Camera.hpp  Mesh.hpp  Texture.hpp
Fluxborn/include/World/: BlockType.hpp  World.hpp
Fluxborn/src/: main.cpp
Fluxborn/src/Renderer/: Mesh.cpp  Texture.cpp  VertexArray.cpp
Internal/UntilWindow/: CMakeLists.txt
include/: Application.hpp
include/Core/: ThreadPool.hpp
include/Core/Events/: Event.h  EventManager.h
include/Renderer/: Buffer.hpp  Camera.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/World/: BlockType.hpp  Chunk.hpp  World.hpp
src/: Application.cpp  main.cpp
src/Core/Events/: EventManager.cpp
src/Renderer/: Buffer.cpp  Camera.cpp  Shader.cpp  VertexArray.cpp
src/World/: Chunk.cpp  World.cpp
